<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oportunidades UTFPR</string>
    <string name="action_settings">Configuração</string>
    <string name="benVindo">Bem Vindo</string>
    <string name="listaOp">Listar oportunidades</string>
    <string name="cadastraOp">Cadastrar Oportunidade</string>
    <string name="hListaOp">Listar todas as Oportunidades</string>
    <string name="hCadastraOp">Nescessario login para cadastros</string>
    <string name="sLogar">Logar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="sUsuario">Usuario:</string>
    <string name="sSenha">Senha:</string>
    <string name="shUsuario">nome do usuario</string>
    <string name="shSenha">senha do usuario</string>
    <string name="title_activity_cadastra_op">Cadastro de Oportunidade</string>
    <string name="title_activity_lista_op">Lista Oportunidades</string>
    <string name="bGravarOportunidade">Gravar</string>
    <string name="sDeslogar">Deslogar</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="sFiltroCategoria">Filtra Categoria</string>
    <string name="title_activity_filtro_categoria">FiltroCategoriaActivity</string>
    <string name="sFiltroCurso">Filtra Curso</string>
    <string name="title_activity_ver_op">VerOpActivity</string>
    <string name="sBADEditar">Editar</string>
    <string name="sBADVisualizar">Vizualizar</string>
    <string name="sCancel">Cancelar</string>
    <string name="sLoginCerto">Usuario Logado</string>
    <string name="sLoginErrado">User ou Senhas Errados</string>
    <string name="sExtra">Extra</string>
    <string name="sGPS">GPS</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="sGPSFalha">GPS Desligado</string>
    <string name="title_activity_acelerometro">AcelerometroActivity</string>
    <string name="sAcelerometro">Acelerometro</string>
    <string name="sLatitude">Latitude:</string>
    <string name="sLongitude">Longitude:</string>
    <string name="sCamera">Camera</string>
    <string name="sLink">Link</string>

</resources>
