<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/iLogar" android:showAsAction="collapseActionView" android:title="@string/sLogar"></item>
	<item android:id="@+id/iCadastrarOp" android:showAsAction="collapseActionView" android:title="@string/cadastraOp"></item>
	<item android:id="@+id/iFiltroCategoria" android:showAsAction="collapseActionView" android:title="@string/sFiltroCategoria"></item>
	<item android:id="@+id/iFiltroCurso" android:showAsAction="collapseActionView" android:title="@string/sFiltroCurso"></item>
	<item android:id="@+id/iExtra" android:title="@string/sExtra" android:showAsAction="collapseActionView">
		<menu>
			<item android:id="@+id/iGPS" android:title="@string/sGPS" android:showAsAction="collapseActionView"/>
			<item android:id="@+id/iAcelerometro" android:showAsAction="collapseActionView" android:title="@string/sAcelerometro"/>
			<item android:id="@+id/iLink" android:title="@string/sLink" android:showAsAction="collapseActionView"/>
			<item android:id="@+id/iCamera" android:title="@string/sCamera"/>
		</menu>
	</item>
</menu>
